--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
+    "css-loader": "^0.23.1",
+    "es6-promise": "^3.0.2",
     "firebase": "^2.3.2",
     "lodash": "^4.0.0",
+    "moment": "^2.11.1",
+    "style-loader": "^0.13.0",
     "vue": "^1.0.0",
     "vue-router": "^0.7.8"
   },
