--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.11.1",
     "style-loader": "^0.13.0",
     "vue": "^1.0.0",
-    "vue-router": "^0.7.8"
+    "vue-router": "^0.7.8",
+    "vue-validator": "^1.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
