--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^0.23.1",
     "es6-promise": "^3.0.2",
     "firebase": "^2.3.2",
+    "jquery": "^2.2.0",
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "style-loader": "^0.13.0",
