--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^2.3.2",
     "jquery": "^2.2.0",
     "lodash": "^4.0.0",
+    "mandrill-api": "^1.0.45",
     "moment": "^2.11.1",
     "style-loader": "^0.13.0",
     "vue": "^1.0.0",
@@ -54,5 +55,8 @@
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
+  },
+  "engines": {
+    "node": "5.0.0"
   }
 }
