--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.0.2",
     "express": "^4.13.4",
