--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "firebase": "^2.3.2",
     "jquery": "^2.2.0",
     "lodash": "^4.0.0",
-    "mandrill-api": "^1.0.45",
     "moment": "^2.11.1",
     "path": "^0.12.7",
+    "postmark": "^1.2.1",
     "style-loader": "^0.13.0",
     "vue": "^1.0.0",
     "vue-router": "^0.7.8",
