Finished email server

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "jquery": "^2.2.0",
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
+    "morgan": "^1.6.1",
     "path": "^0.12.7",
-    "postmark": "^1.2.1",
+    "sendgrid": "^2.0.0",
     "style-loader": "^0.13.0",
     "vue": "^1.0.0",
     "vue-router": "^0.7.8",
